<?xml version="1.0"?>
<package>
  <name>pathtools</name>
  <version>0.0.1</version>
  <description>The pathtools package</description>
  <maintainer email="tkostas@todo.todo">tkostas</maintainer>


  <license>MIT</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_pip</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
